--- a/templates/admin_view.html
+++ b/templates/admin_view.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <title>Example Template</title>
-    <script src="{% static 'js/Chart.min.js' %}"></script>
+    <!--    <script src="{% static 'js/Chart.min.js' %}"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
     <style>
       body{
