--- a/templates/admin_view.html
+++ b/templates/admin_view.html
@@ -3,9 +3,7 @@
 <html lang="en">
   <head>
     <title>Example Template</title>
-    <!--    <script src="{% static 'js/Chart.min.js' %}"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
     <style>
       body{
         background-color: rgb(44, 51, 51);
@@ -13,6 +11,8 @@
         font-weight: bold;
       }
       button, input, select{
+        text-align: center;
+        display: block;
         width: 150px;
         font-weight: bold;
         border:rgb(165, 201, 202) 3px solid;
@@ -39,12 +39,27 @@
   <body>
     <h1>{{ message }}</h1>
 
+<!-- <div style="display: flex;">   -->
 <form class="box">
+  <div>
+    <div>
+  <div style="margin-top: 1em;">
+    <div style="display: flex; justify-content: center;">
   <label for="date-input">Select Start Date:</label>
+</div>
   <input type="date" id="date-input" name="start_date">
+</div>
+</div>
+<div style="margin-top: 1em;">
+  <div style="display: flex; justify-content: center;">
   <label for="end-date-input">Select End Date:</label>
+  </div>
   <input type="date" id="end-date-input" name="end_date">
+</div>  
+<div style="display: flex; justify-content: center; margin-top: 1em;">
   <button type="button" id="submit-dates-btn">Submit</button>
+</div>
+  
   <script>
 
     var startDateInput = document.getElementById("date-input");
@@ -64,12 +79,18 @@ currentUrl.search = searchParams.toString();
 window.location = currentUrl.toString();
 });
   </script>
+  </div>
 </form>
+<!-- </div>   -->
     {% if not items %}
     <h1>No data to show</h1>
     {% endif %}
   {% for day in items %}
-    <div>Employees tiredness stats for {{ day.day }}</div>
+    <div  style="display: flex; justify-content: center; margin-top: 6em; margin-bottom: 0.5em;">
+    
+    <h2>Employees tiredness stats for {{ day.day }}</h2>  
+    
+    </div>
           <canvas id="myChart-{{forloop.counter}}"></canvas>
     <script>
 
